<resources>
    <string name="app_name">Fisio Home</string>
    <string name="douglas">Douglas</string>
    <string name="abcdef_ghijk">abcdef ghijk</string>
    <string name="localizacao">Localização</string>
    <string name="horarios">Horários</string>
    <string name="contato">Contato</string>
    <string name="preco">Preço</string>
    <string name="rs_cifrao">R$</string>
    <string name="_50_virgula_00">50,00</string>
    <string name="agendados">Agendados</string>
    <string name="cancelados">Cancelados</string>
    <string name="realizados">Realizados</string>
    <string name="dia">Dia</string>
    <string name="_06_05">06/05</string>
    <string name="nome">Nome</string>
    <string name="doulgas_funny">Doulgas Funny</string>
    <string name="meio_de_pagamento">Meio de pagamento</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="motivo">Motivo</string>
    <string name="confirmar">Confirmar</string>
    <string name="local">Local</string>
    <string name="n_registro">Nº Registro</string>
    <string name="endereco">Endereço</string>
    <string name="logradouro">Logradouro</string>
    <string name="numero">Número</string>
    <string name="bairro">Bairro</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="cep">CEP</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="idade">Idade</string>
    <string name="sexo">Sexo</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="button">Button</string>
    <string name="fisioterapeuta">Fisioterapeuta</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="acessar">Acessar</string>
    <string name="paciente">Paciente</string>
    <string name="agendar">Agendar</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="ver">Ver</string>
    <string name="crm">CRM</string>
    <string name="cadastrar_paciente">Cadastrar Paciente</string>
    <string name="cadastrar_fisioterapeuta">Cadastrar Fisioterapeuta</string>
    <string name="numero_do_cartao">Número do cartão</string>
    <string name="data_de_venc">Data de venc.</string>
    <string name="cvv">CVV</string>
    <string name="pais">País</string>
    <string name="avancar">Avançar</string>
    <string name="cpf">CPF</string>

    <string-array name="ufs">
        <item/>
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>
</resources>
