<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.AgendamentosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_agendamentos_agendados"
            android:text="@string/agendados"
            tools:ignore="ButtonStyle"
            style="?attr/buttonBarButtonStyle"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|" />

        <Button
            android:id="@+id/button__agendamentos_cancelados"
            android:text="@string/cancelados"
            tools:ignore="ButtonStyle"
            style="?attr/buttonBarButtonStyle"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|" />

        <Button
            android:id="@+id/button__agendamentos_realizados"
            android:text="@string/realizados"
            style="?attr/buttonBarButtonStyle"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="ButtonStyle"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lista__agendamentos_agendados"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_lista_agendamentos" />
</LinearLayout>