<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".activity.DetalheFisioterapeutaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--TODO - Falta Componente de data-->

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            app:mcv_selectionColor="#00F"
            app:mcv_showOtherDates="all"
            app:mcv_tileSize="50dp" />

        <!--<DatePicker-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="100dp"-->
        <!--&gt;</DatePicker>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="@string/local"
                android:src="@drawable/person" />

            <TextView
                android:id="@+id/local_fisio_detalhe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/local"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginVertical="16dp"
                android:layout_weight="2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nome_fisio_detalhe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/douglas" />

                <TextView
                    android:id="@+id/numero_registro_fisio_detalhe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/abcdef_ghijk" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_localizacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="@string/local"
                android:src="@drawable/location" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginVertical="16dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:text="Local:  " />

            <TextView
                android:id="@+id/local_fisio_detalhe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/local"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginVertical="16dp"
                android:layout_weight="2"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_horarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="Horários"
                android:src="@drawable/clock" />

            <TextView
                android:id="@+id/horario_fisio_detalhe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginVertical="16dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:text="Horários" />

        </LinearLayout>

        <ListView
            android:id="@+id/lista_horarios_detalhe"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="16dp"/>

        <!--TODO - Falta Lista de Horario-->

        <LinearLayout
            android:id="@+id/linear_contato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="@string/local"
                android:src="@drawable/phone" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginVertical="16dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:text="Contato:  " />

            <TextView
                android:id="@+id/contato_fisio_detalhe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="contato"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginVertical="16dp"
                android:layout_weight="2"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_preco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="@string/local"
                android:src="@drawable/money" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginVertical="16dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:text="Valor:  " />

            <TextView
                android:id="@+id/preco_fisio_detalhe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="preco"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginVertical="16dp"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/cifrao"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/rs_cifrao"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginVertical="16dp"/>

            <TextView
                android:id="@+id/valor_preco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginVertical="16dp"
                android:text="@string/_50_virgula_00" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>